@@ -14,7 +14,7 @@ pkginc_HEADERS = \
 noinst_HEADERS = base64.h rpmio_internal.h
 
 lib_LTLIBRARIES = librpmio.la
-librpmio_la_SOURCES = rpmrpc.c rpmio.c rpmio_api.c url.c macro.c \
+librpmio_la_SOURCES = rpmrpc.c rpmio.c url.c macro.c \
 	base64.c digest.c strcasecmp.c stubs.c \
 	ugid.c rpmmalloc.c rpmlog.c
 librpmio_la_LDFLAGS = -release @VERSION@
